tests/ui/errors/snapshots/equality_on_struct_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[equality]` not on a struct or enum
   ╭─[test.lis:3:3]
 2 │ struct Config {
 3 │   #[equality]
   ·   ─────┬─────
   ·        ╰── no fields or variants to compare here
 4 │   value: int,
   ╰────
  help: Only a struct or enum can be marked `#[equality]` · code: [attribute.equality_not_a_struct_or_enum]
