tests/ui/errors/snapshots/equality_on_tuple_struct.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[equality]` on a tuple struct
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[equality]
   · ─────┬─────
   ·      ╰── tuple structs and newtypes are not supported
 3 │ struct Pair(int, int)
   ╰────
  help: Give the type named fields, or hand-write an `equals` method · code: [attribute.equality_on_tuple_struct]
