tests/ui/errors/snapshots/equality_on_type_alias.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `#[equality]` not on a struct or enum
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[equality]
   · ─────┬─────
   ·      ╰── no fields or variants to compare here
 3 │ type Foo = int
   ╰────
  help: Only a struct or enum can be marked `#[equality]` · code: [attribute.equality_not_a_struct_or_enum]
