tests/ui/errors/snapshots/equality_rejects_bounded_equals.snap
---
source: tests/ui/errors/mod.rs
---
  [error] `#[equality]` conflicts with a bounded `equals`
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[equality]
   · ─────┬─────
   ·      ╰── would synthesize an `equals` of its own
 3 │ struct Box<T: Comparable> { value: T }
   ╰────
  help: A hand-written `equals` must carry the same generic bounds as the type, or it strengthens the type for every instantiation. Match the type's bounds, or remove `#[equality]` · code: [attribute.equality_bounded_equals]
