tests/ui/errors/snapshots/equality_rejects_cross_module_private_equals.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot derive equality
   ╭─[main.lis:5:17]
 4 │ #[equality]
 5 │ struct Holder { item: models.Item }
   ·                 ──┬─
   ·                   ╰── `item` cannot be compared
   ╰────
  help: `#[equality]` cannot compare a struct containing non-comparable fields. Give `Holder` a hand-written `equals` method, mark the field's type `#[equality]`, or remove the field · code: [attribute.cannot_derive_equality]
