tests/ui/errors/snapshots/equality_rejects_embedded_generic_parent_bound_equals.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Conflicting impl bound
    ╭─[test.lis:15:9]
 14 │ 
 15 │ impl<T: Parent<int>> Box<T> {
    ·         ─────┬─────
    ·              ╰── this bound cannot strengthen the receiver type
 16 │   fn equals(self, other: Box<T>) -> bool {
    ╰────
  help: `Box` already bounds this parameter with a different `Parent` instantiation. A receiver method would embed `Parent` twice, and no type argument satisfies both. Match the type's bound, or relax the type's declaration · code: [infer.impl_bound_conflicts_with_type]
