tests/ui/errors/snapshots/equality_rejects_mismatched_generic_interface_bound_equals.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Conflicting impl bound
    ╭─[test.lis:9:9]
  8 │ 
  9 │ impl<T: Parent<int>> Box<T> {
    ·         ─────┬─────
    ·              ╰── this bound cannot strengthen the receiver type
 10 │   fn equals(self, other: Box<T>) -> bool {
    ╰────
  help: `Box` already bounds this parameter with a different `Parent` instantiation. A receiver method would embed `Parent` twice, and no type argument satisfies both. Match the type's bound, or relax the type's declaration · code: [infer.impl_bound_conflicts_with_type]
